--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ task zip(type: Zip) {
 		include "views/**"
 	}
 	destinationDir(file("dist"))
-	baseName "trainSchedule"
+	baseName "railwaytt"
 }
 
 //declare task dependencies
