--- a/railwaytt-kube-canary.yml
+++ b/railwaytt-kube-canary.yml
@@ -1,39 +1,39 @@
 kind: Service
 apiVersion: v1
 metadata:
-  name: train-schedule-service-canary
+  name: railway-timetable-service-canary
 spec:
   type: NodePort
   selector:
-    app: train-schedule
+    app: railway-timetable
     track: canary
   ports:
   - protocol: TCP
     port: 8080
-    nodePort: 8081
+    nodePort: 30080
 
 ---
 
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  name: train-schedule-deployment-canary
+  name: railway-timetable-deployment-canary
   labels:
-    app: train-schedule
+    app: railway-timetable
 spec:
   replicas: $CANARY_REPLICAS
   selector:
     matchLabels:
-      app: train-schedule
+      app: railway-timetable
       track: canary
   template:
     metadata:
       labels:
-        app: train-schedule
+        app: railway-timetable
         track: canary
     spec:
       containers:
-      - name: train-schedule
+      - name: railway-timetable
         image: $DOCKER_IMAGE_NAME:$BUILD_NUMBER
         ports:
         - containerPort: 8080
