--- a/railwaytt-kube.yml
+++ b/railwaytt-kube.yml
@@ -1,11 +1,11 @@
 kind: Service
 apiVersion: v1
 metadata:
-  name: train-schedule-service
+  name: railway-timetable-service
 spec:
   type: NodePort
   selector:
-    app: train-schedule
+    app: railway-timetable
   ports:
   - protocol: TCP
     port: 8080
@@ -16,23 +16,23 @@ spec:
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  name: train-schedule-deployment
+  name: railway-timetable-deployment
   labels:
-    app: train-schedule
+    app: railway-timetable
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: train-schedule
+      app: railway-timetable
       track: stable
   template:
     metadata:
       labels:
-        app: train-schedule
+        app: railway-timetable
         track: stable
     spec:
       containers:
-      - name: train-schedule
+      - name: railway-timetable
         image: $DOCKER_IMAGE_NAME:$BUILD_NUMBER
         ports:
         - containerPort: 8080
