--- a/railwaytt-kube.yml
+++ b/railwaytt-kube.yml
@@ -12,7 +12,7 @@ spec:
     nodePort: 30081
 ---
 
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: railway-timetable-deployment
